--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="icon" href="">
-        <title>conichi SDK - Welcome</title>
+        <link rel="icon" href="https://www.paypalobjects.com/webstatic/icon/favicon.ico">
+        <title>PayPal PHP SDK - Welcome</title>
         <!-- Bootstrap core CSS -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -30,49 +30,92 @@
             </div>
             <div class="container content">
                 <div class="row-fluid">
-                    <h2>//  conichi SDK Wiki</h2><hr />
+                    <h2>// PayPal PHP SDK <a href="https://github.com/paypal/PayPal-PHP-SDK" title="Github Repository"><i class="fa fa-github"></i></a></h2><hr />
                     <p class="lead">
-                      Conichi-SDK is a tool that allows users to be recognised around the Beacon through Bluetooth Low Energy (BLE). Operated as a Software-as-a-Service (SaaS) solution, Conichi’s features focus on personal guest recognition, fast-forwarding check-in, enabling mobile payment (thus check-out), identifying personal preferences, rewarding loyalty and enabling instant feedback.
+                        PayPal PHP SDK is our official Open Source PHP SDK for supporting PayPal Rest APIs. Checkout all the supporting documents, samples, codebase from the following links
                     </p>
                 </div><br /><br />
                 <div class="row clearfix">
-                    <a href="">
+                    <a href="https://github.com/paypal/PayPal-PHP-SDK/wiki">
                         <div class="col-md-4">
                             <div class="well clearfix">
                                 <div class="sprite"><i class="fa fa-book fa-4x"></i></div>
-                                <div class="box"><h3>Android SDK Wiki</h3>
+                                <div class="box"><h3>PHP SDK Wiki</h3>
                                     <hr/>
-                                    <p> Find everything from Installing, running Samples, Configurations in Android SDK Wiki </p>
+                                    <p> Find everything from Installing, running Samples, Configurations in PHP SDK Wiki </p>
                                 </div>
                             </div>
                         </div>
                     </a>
-                    <a href="">
+                    <a href="http://paypal.github.io/PayPal-PHP-SDK/docs/">
                         <div class="col-md-4">
                             <div class="well clearfix">
                                 <div class="sprite"><i class="fa fa-code fa-4x"></i></div>
-                                <div class="box"><h3>iOS SDK Wiki</h3>
+                                <div class="box"><h3>PHP Source Docs</h3>
                                     <hr/>
-                                    <p> Find everything from Installing, running Samples, Configurations in iOS SDK Wiki  </p></div>
+                                    <p> Check out PHP Source Documentation, to see the internals of PHP SDK. </p></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="http://paypal.github.io/PayPal-PHP-SDK/sample/">
+                        <div class="col-md-4">
+                            <div class="well clearfix">
+                                <div class="sprite"><i class="fa fa-terminal fa-4x"></i></div>
+                                <div class="box"><h3>PHP Sample Code</h3>
+                                    <hr/>
+                                    <p> Check out the sample code for using SDKs to call all PayPal APIs. </p></div>
                             </div>
                         </div>
                     </a>
                 </div>
+                <div class="row clearfix">
+                    <a href="https://developer.paypal.com/webapps/developer/docs/api/">
+                        <div class="col-md-4">
+                            <div class="well clearfix">
+                                <div class="sprite"><i class="fa fa-paypal fa-4x"></i></div>
+                                <div class="box"><h3>PayPal API Reference</h3>
+                                    <hr/>
+                                    <p> Checkout the Official PayPal REST API Reference, explaining all API Models</p></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="https://github.com/paypal/PayPal-PHP-SDK/releases">
+                        <div class="col-md-4">
+                            <div class="well clearfix">
+                                <div class="sprite"><i class="fa fa-tags fa-4x"></i></div>
+                                <div class="box"><h3>PHP SDK Releases</h3>
+                                    <hr/>
+                                    <p>Download the latest PHP SDK Release</p></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="https://github.com/paypal/rest-api-sample-app-php">
+                        <div class="col-md-4">
+                            <div class="well clearfix">
+                                <div class="sprite"><i class="fa fa-shopping-cart fa-4x"></i></div>
+                                <div class="box"><h3>Sample Application</h3>
+                                    <hr/>
+                                    <p>Explore a Pizza Store developed using PayPal PHP SDK</p></div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
         <footer class="footer">
             <div class="container">
                 <div class="footer-div">
                     <ul class="footer-links">
                         <li>
-                            <a href="" target="_blank"><i
+                            <a href="https://github.com/paypal/PayPal-PHP-SDK" target="_blank"><i
                                     class="fa fa-github"></i>
                                 Github</a></li>
                         <li>
-                            <a href="" target="_blank"><i
-                                    class="fa fa-book"></i>API Reference</a>
+                            <a href="https://developer.paypal.com/webapps/developer/docs/api/" target="_blank"><i
+                                    class="fa fa-book"></i> PayPal API Reference</a>
                         </li>
                         <li>
-                            <a href="" target="_blank"><i
+                            <a href="https://github.com/paypal/PayPal-PHP-SDK/issues" target="_blank"><i
                                     class="fa fa-exclamation-triangle"></i> Report Issues </a>
                         </li>
 
