--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <div class="sprite"><i class="fa fa-apple fa-4x"></i></div>
                                 <div class="box"><h3>iOS SDK Wiki</h3>
                                     <hr/>
-                                    <p> description </p></div>
+                                    <p> descriptionss </p></div>
                             </div>
                         </div>
                     </a>
