--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
             </div>
             <div class="container content">
                 <div class="row-fluid">
-                    <h2>// conichi SDK <a href="https://github.com/paypal/PayPal-PHP-SDK" title="Github Repository"><i class="fa fa-github"></i></a></h2><hr />
+                    <h2>// conichi SDK </h2><hr />
                     <p class="lead">
-              conichi-SDK is a tool that allows users to be recognised around the Beacon through Bluetooth Low Energy (BLE). Operated as a Software-as-a-Service (SaaS) solution, conichi’s features focus on personal guest recognition, fast-forwarding check-in, enabling mobile payment (thus check-out), identifying personal preferences, rewarding loyalty and enabling instant feedback.
+              conichi-SDK is a tool that allows users to be recognised around the Beacon through Bluetooth Low Energy (BLE).
+                    </p>
+                    <h3>// How does the conichi-SDK work? </h3><hr />
+               <p class="lead">
+         Each beacon is constantly sending bluetooth signals. Once a smartphone is in close proximity, the beacon’s ID number is detected by the conichi app and instantly communicated to the conichi cloud. Our cloud recognises the location of the beacon and checks the action that is assigned to it, responding accordingly.
                     </p>
                 </div><br /><br />
                 <div class="row clearfix">
