--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               conichi-SDK is a tool that allows users to be recognised around the Beacon through Bluetooth Low Energy (BLE).
                     </p>
                     <h3>// How does the conichi-SDK work? </h3><hr />
-               <p class="lead">
+               <p class="child">
          Each beacon is constantly sending bluetooth signals. Once a smartphone is in close proximity, the beacon’s ID number is detected by the conichi app and instantly communicated to the conichi cloud. Our cloud recognises the location of the beacon and checks the action that is assigned to it, responding accordingly.
                     </p>
                 </div><br /><br />
