--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </p>
                 </div><br /><br />
                 <div class="row clearfix">
-                    <a href="http://paypal.github.io/PayPal-PHP-SDK/docs/">
+                    <a href="">
                         <div class="col-md-4">
                             <div class="well clearfix">
                                 <div class="sprite"><i class="fa fa-android fa-4x"></i></div>
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="http://paypal.github.io/PayPal-PHP-SDK/sample/">
+                    <a href="">
                         <div class="col-md-4">
                             <div class="well clearfix">
                                 <div class="sprite"><i class="fa fa-apple fa-4x"></i></div>
