--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <h2>// conichi SDK </h2><hr />
                     <p class="lead">
               conichi-SDK is a tool that allows users to be recognised around the Beacon through Bluetooth Low Energy (BLE).
+              The SDK is the easiest way to integrate the conichi functionalities into any third party iOS or Android App.
                     </p>
                     <h3>// How does the conichi-SDK work? </h3><hr />
                <p class="child">
