--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="icon" href="https://www.paypalobjects.com/webstatic/icon/favicon.ico">
+        <link rel="icon" href="">
         <title>conichi SDK</title>
         <!-- Bootstrap core CSS -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <body>
         <div class="container-fluid body-content">
             <div class="row-fluid header">
-                <img src="https://raw.githubusercontent.com/wiki/paypal/PayPal-PHP-SDK/images/homepage.jpg"
+                <img src="img/homepage.jpg"
                      class="img-responsive">
             </div>
             <div class="container content">
@@ -33,11 +33,14 @@
                     <h2>// conichi SDK </h2><hr />
                     <p class="lead">
               conichi-SDK is a tool that allows users to be recognised around the Beacon through Bluetooth Low Energy (BLE).
-              The SDK is the easiest way to integrate the conichi functionalities into any third party iOS or Android App.
                     </p>
                     <h3>// How does the conichi-SDK work? </h3><hr />
                <p class="child">
          Each beacon is constantly sending bluetooth signals. Once a smartphone is in close proximity, the beacon’s ID number is detected by the conichi app and instantly communicated to the conichi cloud. Our cloud recognises the location of the beacon and checks the action that is assigned to it, responding accordingly.
+                    </p>
+                    <h3>// iOS/Android SDK </h3><hr />
+               <p class="child">
+              The SDK is the easiest way to integrate the conichi functionalities into any third party iOS or Android App.
                     </p>
                 </div><br /><br />
                 <div class="row clearfix">
@@ -47,7 +50,7 @@
                                 <div class="sprite"><i class="fa fa-android fa-4x"></i></div>
                                 <div class="box"><h3>Android SDK wiki</h3>
                                     <hr/>
-                                    <p> description </p></div>
+                                    <p>Getting started conichi SDK for who likes robots!</p></div>
                             </div>
                         </div>
                     </a>
@@ -57,7 +60,17 @@
                                 <div class="sprite"><i class="fa fa-apple fa-4x"></i></div>
                                 <div class="box"><h3>iOS SDK Wiki</h3>
                                     <hr/>
-                                    <p> descriptionss </p></div>
+                                    <p>How to get the iOS SDK running.</p></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="col-md-4">
+                            <div class="well clearfix">
+                                <div class="sprite"><i class="fa fa-exclamation-triangle fa-4x"></i></div>
+                                <div class="box"><h3>SDK Errors</h3>
+                                    <hr/>
+                                    <p>Errors description</p></div>
                             </div>
                         </div>
                     </a>
