Update index.html with link to the Android SDK Wiki page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </p>
                 </div><br /><br />
                 <div class="row clearfix">
-                    <a href="">
+                    <a href="https://github.com/conichiGMBH/conichi-android-sdk/wiki">
                         <div class="col-md-4">
                             <div class="well clearfix">
                                 <div class="sprite"><i class="fa fa-android fa-4x"></i></div>
