--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="footer-div">
                     <ul class="footer-links">
                         <li>
-                            <a href="" target="_blank"><i
+                            <a href="mailto:dev@conichi.com?Subject=Issue Report" target="_blank"><i
                                     class="fa fa-exclamation-triangle"></i> Report Issues </a>
                         </li>
                     </ul>
