update android description

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <div class="sprite"><i class="fa fa-android fa-4x"></i></div>
                                 <div class="box"><h3>Android SDK wiki</h3>
                                     <hr/>
-                                    <p>Getting started conichi SDK for who likes robots!</p></div>
+                                    <p>Getting started conichi SDK for Android</p></div>
                             </div>
                         </div>
                     </a>
