Added iPad configuration tutorial

--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
                             </div>
                         </div>
                     </a>
+                    <a href="https://www.dropbox.com/s/y7k5y9m2qawpe5g/ipad_sandbox_settings.mp4?dl=0">
+                        <div class="col-md-4">
+                            <div class="well clearfix">
+                                <div class="sprite"><i class="fa fa-tablet fa-4x"></i></div>
+                                <div class="box"><h3>Hotelier App Configuration</h3>
+                                    <hr/>
+                                    <p>How to get the iPad running in your sandbox environment.</p></div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
         </div>
         <footer class="footer">
